# cellx-predict

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  interpretation  interpretation.py  requirements.txt  run_docker.sh  run_prepare.py  run_training.py  setup.cfg  setup.py  visualization  visualization.py
.github/workflows/: cellxpred.yml
cellxpredict/: config.py  dataset.py  interpretation.py  models.py  prepare.py  session.py  synthetic.py  train.py  visualization.py
notebooks/: inference.ipynb
tests/: test_config.py  test_synthetic.py
