[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py

[options]
python_requires = >=3.7
install_requires =
  tensorflow>=2.4
  numpy>=1.12.0
  scipy
  scikit-image
  scikit-learn
  tqdm

[options.extras_require]
tests =
  pytest
